--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   
   <body>
+    <img src="https://avatars0.githubusercontent.com/u/42323311?v=4">
     This is my first file
   </body>
 </html>
