--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Title</h1>
     This is my first file
+    <img src="https://avatars0.githubusercontent.com/u/42323311?v=4"></img>
   </body>
 </html>
