--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     <h1>Title</h1>
     This is my first file
     <img src="https://avatars0.githubusercontent.com/u/42323311?v=4"></img>
+    <ul>
+      <li><a href="http://www.repubblica.it"></li>
+        <li><a href="http://www.lastampa.it"></li>
+          <li><a href="http://www.pippo.it"></li>
+  
   </body>
 </html>
