--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     This is my first file
     <img src="https://avatars0.githubusercontent.com/u/42323311?v=4"></img>
   <ol>
-    <li><a href="http://www.lastampa.it"></li>
-    <li><a href="http://www.repubblica.it"></li>
-    <li><a href="http://www.google.it"></li>
+    <li><a href="http://www.lastampa.it">www.lastampa.it</a></li>
+    <li><a href="http://www.repubblica.it">www.repubblica.it</a></li>
+    <li><a href="http://www.google.it">www.google.it</a></li>
   </ol>
   </body>
 </html>
