--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <img src="https://avatars0.githubusercontent.com/u/42323311?v=4"></img>
 
     <ul>
-      <li><a href="http://www.repubblica.it"></a></li>
-        <li><a href="http://www.lastampa.it"></a></li>
-          <li><a href="http://www.pippo.it"></a></li>
+      <li><a href="http://www.repubblica.it">www.ciao.it</a></li>
+        <li><a href="http://www.lastampa.it">stampa</a></li>
+          <li><a href="http://www.pippo.it"></a>pippo</li>
   </ul>
   <ol>
     <li><a href="http://www.lastampa.it">www.lastampa.it</a></li>
